# geminirust

./: Cargo.toml  README.md
src/: client.rs  configs.rs  lib.rs  main.rs
